--- a/src/lib/locales/es.json
+++ b/src/lib/locales/es.json
@@ -10,5 +10,28 @@
   "searchTitle": "Busca cualquier ciudad del mundo",
   "weekForecastTitle": "Pronóstico de 7 días",
   "sunriseTitle": "Amanecer",
-  "sunsetTitle": "Atardecer"
+  "sunsetTitle": "Atardecer",
+  "months": {
+    "january": "Enero",
+    "february": "Febrero",
+    "march": "Marzo",
+    "april": "Abril",
+    "may": "Mayo",
+    "june": "Junio",
+    "july": "Julio",
+    "august": "Agosto",
+    "september": "Septiembre",
+    "october": "Octubre",
+    "november": "Noviembre",
+    "december": "Diciembre"
+  },
+  "smallWeekDays": {
+    "mon": "Lun",
+    "tue": "Mar",
+    "wed": "Mie",
+    "thu": "Jue",
+    "fri": "Vie",
+    "sat": "Sab",
+    "sun": "Dom"
+  }
 }
